--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
+  <title>Weather Forecast</title>
 </head>
 
 <body>
